--- a/index.html
+++ b/index.html
@@ -19,81 +19,15 @@
 
 <body>
 
-
+  <div id="form">
+    <form action="search" method="post">
+      <input type="text" name="search" id="search">
+      <!-- <input type="submit" value="Search"> -->
+    </form>
+  </div>
 
   <div id="mapid"></div>
-  <script>
-    var mymap = L.map('mapid').setView([0, 0], 2);
-
-    L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-      maxZoom: 18,
-      attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
-        'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-      id: 'mapbox/streets-v11',
-      tileSize: 512,
-      zoomOffset: -1
-    }).addTo(mymap);
-
-    // L.marker([51.5, -0.09]).addTo(mymap)
-    // 	.bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
-    //
-    // L.circle([51.508, -0.11], 500, {
-    // 	color: 'red',
-    // 	fillColor: '#f03',
-    // 	fillOpacity: 0.5
-    // }).addTo(mymap).bindPopup("I am a circle.");
-    //
-    // L.polygon([
-    // 	[51.509, -0.08],
-    // 	[51.503, -0.06],
-    // 	[51.51, -0.047]
-    // ]).addTo(mymap).bindPopup("I am a polygon.");
-
-
-    var popup = L.popup();
-
-    function getJSONP(url, success) {
-
-      var ud = '_' + +new Date,
-        script = document.createElement('script'),
-        head = document.getElementsByTagName('head')[0] ||
-        document.documentElement;
-
-      window[ud] = function(data) {
-        head.removeChild(script);
-        success && success(data);
-      };
-
-      script.src = url.replace('callback=?', 'callback=' + ud);
-      head.appendChild(script);
-
-    }
-
-
-    // function latlng_to_name(lat, lon) {
-    // 	getJSONP('https://nominatim.openstreetmap.org/reverse.php?lat='+lat+'&lon='+lon+'&zoom=18&format=jsonv2', function(data)){
-    // 		return function(data);
-    // 	}
-    // }
-
-    function latlng_to_name(lat, lon) {}
-
-    function onMapClick(e) {
-      popup
-        .setLatLng(e.latlng)
-        .setContent("You clicked the map at " + e.latlng.toString() + "</br>" +
-          "You clicked the map at " + e.latlng.toString() + "</br>" +
-          "You clicked the map at " + e.latlng.toString() + "</br>" +
-          "You clicked the map at " + e.latlng.toString() + "</br>" +
-          "You clicked the map at " + e.latlng.toString() + "</br>" +
-          "You clicked the map at " + e.latlng + "</br>")
-        .openOn(mymap);
-    }
-
-    mymap.on('click', onMapClick);
-  </script>
-
-
+  <script src="js/map.js"> </script>
 
 </body>
 
