--- a/index.html
+++ b/index.html
@@ -3,31 +3,32 @@
 
 <head>
 
-  <title>Interactive Map</title>
+    <title>Interactive Map</title>
 
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
-  <link rel="stylesheet" href="css/main.css" />
-  <link rel="stylesheet" href="css/leaflet.css" />
-  <script src="js/leaflet.js"></script>
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/leaflet.css" />
+    <script src="js/leaflet.js"></script>
 
 
 </head>
 
 <body>
 
-  <div id="form">
-    <form action="search" method="post">
-      <input type="text" name="search" id="search">
-      <!-- <input type="submit" value="Search"> -->
-    </form>
-  </div>
+    <div id="form">
+        <form action="search" method="post">
+            <input type="text" name="search" id="search">
+            <!-- <input type="submit" value="Search"> -->
+        </form>
+    </div>
 
-  <div id="mapid"></div>
-  <script src="js/map.js"> </script>
+    <div id="mapid"></div>
+    <script src="js/map.js">
+    </script>
 
 </body>
 
